--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
       suffix: .jsp
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/instargram?serverTimeZone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/test?serverTimeZone=UTC&characterEncoding=UTF-8
     username: root
-    password: root
+    password: 1796
